<resources>
    <string name="app_name">binOWLculars</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username…</string>
    <string name="firstname">First name…</string>
    <string name="lastname">Last name…</string>
    <string name="email">Email…</string>
    <string name="password">Password…</string>
    <string name="confirm">Confirm password</string>
    <string name="capture">Capture</string>
    <string name="discard">Discarc</string>
    <string name="save">Save</string>
    <string name="speak">Speak</string>
    <string name="waiting_for_text_to_be_processed">Waiting for text to be processed</string>
    <string name="scan_picture">Scan picture</string>
    <string name="saved_entries">Saved entries</string>
    <string name="logout">Log Out</string>
</resources>
