<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data class=".MainActivityBinding"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
    >

        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:layout_marginTop="18dp"
                   android:src="@drawable/owl_logo"
        />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:text="@string/app_name"
                  android:textSize="40sp"

        />
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:paddingLeft="24dp"
                      android:paddingTop="56dp"
                      android:paddingRight="24dp">


            <Button android:id="@+id/scan_picture_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:padding="12dp"
                    android:text="@string/scan_picture"
            />


            <Button android:id="@+id/saved_entries_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:padding="12dp"
                    android:text="@string/saved_entries"
            />


            <Button android:id="@+id/logout_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:padding="12dp"
                    android:text="@string/logout"
            />
        </LinearLayout>

    </LinearLayout>
</layout>