<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data class=".RegisterActivityBinding"/>
    <androidx.core.widget.NestedScrollView android:layout_width="match_parent"
                                           android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:paddingTop="56dp"
                android:paddingRight="24dp">

            <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
                                                                   android:layout_height="wrap_content"
                                                                   android:layout_marginTop="8dp"
                                                                   android:layout_marginBottom="8dp">
                <EditText android:id="@+id/first_name_edit_text"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/firstname"
                          android:inputType="text"
                />

                <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
                                                                       android:layout_height="wrap_content"
                                                                       android:layout_marginTop="8dp"
                                                                       android:layout_marginBottom="8dp">
                    <EditText android:id="@+id/last_name_edit_text"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:hint="@string/lastname"
                              android:inputType="text"
                    />

                </com.google.android.material.textfield.TextInputLayout>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
                                                                   android:layout_height="wrap_content"
                                                                   android:layout_marginTop="8dp"
                                                                   android:layout_marginBottom="8dp">
                <EditText android:id="@+id/email_edit_text"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/email"
                          android:inputType="textEmailAddress"
                />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
                                                                   android:layout_height="wrap_content"
                                                                   android:layout_marginTop="8dp"
                                                                   android:layout_marginBottom="8dp">
                <EditText android:id="@+id/password_edit_text"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/password"
                          android:inputType="textPassword"
                />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
                                                                   android:layout_height="wrap_content"
                                                                   android:layout_marginTop="8dp"
                                                                   android:layout_marginBottom="8dp">
                <EditText android:id="@+id/confirm_password_edit_text"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/confirm"
                          android:inputType="textPassword"
                />

            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/register_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="12dp"
                    android:padding="12dp"
                    android:text="@string/register"/>


            <TextView android:id="@+id/login_link"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginBottom="24dp"
                      android:gravity="center"
                      android:text="Already a member? Login"
                      android:textSize="16dip"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>